<resources>
    <string name="app_name">Eden</string>
    <string name="eden">EDEN</string>
    <string name="greetings">Let\'s gardening :)</string>
    <string name="continue_">Continue</string>
    <string name="plant">plant</string>
    <string name="logo">logo</string>
    <string name="welcome">welcome</string>
    <string name="name">Name</string>

    <string name="filled_first">Please fill first!</string>
    <string name="wrong_email">Invalid email</string>
    <string name="email">Email</string>
    <string name="input_email">Input your email</string>
    <string name="password">Password</string>
    <string name="invalid_password">Password must be more than five characters</string>
    <string name="input_password">Input password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_account">Login</string>
    <string name="don_t_have_account"><u>Doesn\'t have an account? Create Account</u></string>
    <string name="create_acc">Create Account</string>

    <string name="log_in">Log In</string>
    <string name="fill_field">Field cannot be empty</string>
    <string name="input_name">Input name</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_account">Sign Up</string>
    <string name="have_account"><u>Already Have an Account? Log In</u></string>
    <string name="google_signup">Sign Up With Google</string>
    <string name="google_login">Log In With Google</string>
    <string name="gacha">Gacha</string>
    <string name="redeem">Redeem to Win Gacha</string>

    <string name="exchange_point">Exchange Point 400xp</string>
    <string name="Gacha">choose_gacha</string>
    <string name="plant_bottom_image">Plant Bottom</string>
    <string name="win_gacha">Congratulations!</string>
    <string name="confeti">Confeti</string>
    <string name="get_plant">Get Plant</string>
    <string name="ok">OK</string>
    <string name="close">CLOSE</string>

    <string name="donasi">Donasi</string>
    <string name="logo_donasi">Logo Donasi</string>
    <string name="donasi_sample">Sample Image Donasi</string>
    <string name="search">Cari Donasi</string>
    <string name="sample_detail">Sample Detail Donasi</string>
    <string name="penggalang_sample">Sample Image of Fundraiser</string>
    <string name="organisasi_terverifikasi">Verified Organisation</string>
    <string name="tentang_donasi">About Donation</string>
    <string name="donasi_sekarang">Donate Now</string>
    <string name="detail_donasi">Donation Detail</string>

    <string name="metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="shopee_pay">Shopee Pay</string>
    <string name="dana">Dana</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="gopay">Gopay</string>
    <string name="virtual_acc">Transfer Virtual Account</string>
    <string name="mandiri">Mandiri</string>
    <string name="bca">BCA</string>
    <string name="pembayaran_lain"><u>LSee Another Payment Method</u></string>

    <string name="title_activity_detail_plant_after_scan">DetailPlantAfterScanActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

    <string name="point_overall">%points</string>
    <string name="plant_name">%plant name</string>
    <string name="planted_date">%planted date</string>
    <string name="plant_type">%plant type</string>
    <string name="task">%task</string>
    <string name="task_point">%points</string>
    <string name="progress">%progress</string>
    <string name="my_plants">My Plants</string>
    <string name="task_date">%date</string>
    <string name="planted_points">%point</string>
    <string name="plant_image">Plant image</string>
    <string name="my_plant">My Plant</string>
    <string name="planted">Planted</string>
    <string name="history">History</string>
    <string name="benefit_desc">Benefit description</string>
    <string name="physicalAppearance_desc">Physical apearcance description</string>
    <string name="plant_detail">Plant Detail</string>
    <string name="benefit">Benefit</string>
    <string name="physical_appearance">Physical Appearance</string>
    <string name="task_title">Task</string>
    <string name="progress_title">Progress :</string>
    <string name="this_week">This week</string>
    <string name="goal">Goal</string>


        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">Home</string>
    <string name="my_plants_icon">My Plants</string>
    <string name="scan_icon">Scan</string>
    <string name="gacha_icon">Gacha</string>
    <string name="donasi_icon">Donasi</string>
    <string name="hello">Hellooo</string>
    <string name="avatar_user">Avatar User</string>
    <string name="star_logo">Star Logo</string>
    <string name="points">Points</string>
    <string name="percent">%s</string>
    <string name="people">People</string>
    <string name="card_info">Did you know gardening can affect to the better mental health?</string>
    <string name="card_info2">Studies has proven that gardening able to lift up mood, decrease stress level, and lots more!</string>
    <string name="lets_garden">So, let\'s just garden, shall we?</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="more_details">More Details</string>
    <string name="your_progress">Keep your progress!</string>
    <string name="reminder">Your plants need your attention and affection. Keep an eye for them please :D</string>
    <string name="fyi">For Your Information</string>
    <string name="card_info3">Plants and trees are important to save our earth from global warming by filtering pollution!</string>
    <string name="card_info4">You choose the right path to invest your time and energy to start caring plant and trees!</string>
    <string name="thank_you">Thank you for you action! :D</string>
</resources>