<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_list_plant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        app:cardBackgroundColor="#FAFAFA">

        <ImageView
            android:id="@+id/iv_plants_in_myPlants"
            android:layout_width="47dp"
            android:layout_height="73dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/plant_image"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_plant_name_in_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/plant_name"
        android:textColor="@color/dark_green"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_planted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Planted - "
        android:textColor="@color/green_100"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_planted_date_in_myPlants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="203dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/planted_date"
        android:textColor="@color/green_100"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_plant_type_in_myPlants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/plant_type"
        android:textColor="#A9A9A9"
        android:textSize="10sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/title_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/progress_title"
        android:textColor="@color/mocca"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_progress_in_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/progress"
        android:textColor="@color/mocca"
        android:textSize="12sp"
        android:textStyle="bold" />
</RelativeLayout>
