<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/group_task_in_myPlantDetails"
    android:layout_width="409dp"
    android:layout_height="56dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="12dp"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="2dp">

    <TextView
        android:id="@+id/tv_date_in_myPlantDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/task_date"
        android:textColor="#4A4A4A"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_points_in_myPlantDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/task_point"
        android:textColor="@color/mocca"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_task_in_myPlantDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/task"
        android:textColor="@color/green_100"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</androidx.cardview.widget.CardView>

